# pdftools

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/de/david/busse/pdftools/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/david/busse/pdftools/: MainActivity.kt
app/src/main/java/de/david/busse/pdftools/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/de/david/busse/pdftools/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
pdfhelper/: build.gradle
pdfhelper/src/androidTest/java/de/david/busse/pdfhelper/: ExampleInstrumentedTest.kt
pdfhelper/src/main/: AndroidManifest.xml
pdfhelper/src/main/cpp/: CMakeLists.txt  pdfhelper.cpp
pdfhelper/src/main/java/de/david/busse/pdfhelper/: NativeLib.kt
pdfhelper/src/test/java/de/david/busse/pdfhelper/: ExampleUnitTest.kt
